--- a/MC-Enchant-Order/style.css
+++ b/MC-Enchant-Order/style.css
@@ -6,3 +6,4 @@ body {
 .have {border: 1px solid black; padding: 5px;}
 table, td {border: 1px solid black;}
 input[type="number"] {width: 30px;}
+.td-empty {border: none;}
